# wire-streams

./: .travis.yml  CHANGELOG  LICENSE  README.md  cereal-io-streams.cabal  cereal-streams.cabal  wire-streams.cabal
.github/workflows/: default.yml
bench/: Main.hs
doctest/: Main.hs
src/System/IO/Streams/: Binary.hs  Cereal.hs
test/: EncodeDecodeBinary.hs  EncodeDecodeCereal.hs  Main.hs  Test.hs
