name:                cereal-streams
version:             0.0.0.1
synopsis:            io-streams support for the cereal binary serialization library
description:
    io-streams support for the cereal binary serialization library
    .
license:             BSD3
license-file:        LICENSE
author:              Michael Xavier, Winterland
maintainer:          michael.xavier@soostone.com, winterland1989@gmail.com
copyright:           Soostone Inc, Winterland
category:            Data, Parsing, IO-Streams
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:      System.IO.Streams.Cereal
  build-depends:        base >= 4 && < 5
                    ,   bytestring
                    ,   cereal >= 0.5 && < 0.6
                    ,   io-streams >= 1.2
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
      cereal-streams
    , cereal
    , bytestring
    , io-streams
    , QuickCheck
    , HUnit
    , tasty
    , tasty-quickcheck
    , tasty-hunit
    , derive
    , base
    , mtl
  hs-source-dirs: test
  default-language:    Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  default-language:    Haskell2010
  build-depends:
      base
    , cereal-streams
    , criterion >= 1.0.2.0
    , io-streams
    , bytestring
    , cereal
    , cereal-conduit
    , conduit
    , conduit-extra
    , transformers
    , deepseq
  ghc-options: -rtsopts
  ghc-prof-options: -rtsopts -caf-all -auto-all

source-repository head
  type:     git
  location: git://github.com/winterland1989/cereal-streams.git
